Improved Gradle build files